# study_pdfium

./: README.md
PDFium-Android-Demo/: build.gradle  common.gradle  gradle.properties  settings.gradle
PDFium-Android-Demo/LibPdfium/: build.gradle
PDFium-Android-Demo/LibPdfium/src/main/cpp/: CMakeLists.txt  TestFont.h  mainJNILib.cpp  test_fx_bitmap.cpp  util.h
PDFium-Android-Demo/LibPdfium/src/main/java/com/heaven7/android/pdf/: INativeOwner.java  PdfAnnotManager.java
PDFium-Android-Demo/LibPdfium/src/main/java/com/heaven7/android/pdfium/: TestFx.java
PDFium-Android-Demo/LibPdfium/src/main/java/com/shockwave/pdfium/: PdfDocument.java  PdfiumCore.java
PDFium-Android-Demo/LibPdfiumSep/: build.gradle
PDFium-Android-Demo/PDocViewer/: build.gradle
PDFium-Android-Demo/PDocViewer/src/main/: AndroidManifest.xml
PDFium-Android-Demo/PDocViewer/src/main/java/com/heaven7/android/pdfium/app/: MainActivity.java  TestFxAc.java
PDFium-Android-Demo/PDocViewer/src/main/java/com/knizha/PDocViewer/: CacheManager.java  PDocMainActivity.java  PDocView.java  PdfFile.java
PDFium-Android-Demo/PDocViewer/src/main/java/com/knizha/PDocViewer/scroll/: DefaultScrollHandle.java
PDFium-Android-Demo/PDocViewer/src/main/res/layout/: ac_main.xml  ac_test_fx.xml
StudyPdfiumApp/: build.gradle  settings.gradle
StudyPdfiumApp/app/: CMakeLists.txt  build.gradle
StudyPdfiumApp/app/src/main/: AndroidManifest.xml
StudyPdfiumApp/app/src/main/cpp/: Test.cpp
StudyPdfiumApp/app/src/main/java/com/heaven7/android/pdfium/app/: MainActivity.java
StudyPdfiumApp/app/src/main/res/values/: strings.xml
StudyPdfiumApp/gradle/wrapper/: gradle-wrapper.properties
Test_pdf/: CMakeLists.txt  helpers.cpp  helpers.h  main.cpp
Test_pdf/MedPdf/: MedPdfReader.cpp  MedPdfReader.h  med_pdf_ctx.h
